<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CoinDetailActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/cd_coin_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textViewFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/textViewSlash"
        app:layout_constraintEnd_toStartOf="@+id/textViewSlash"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        tools:text="BTC" />

    <TextView
        android:id="@+id/textViewSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_slash"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/textViewToSymbol"
        app:layout_constraintEnd_toStartOf="@+id/textViewToSymbol"
        app:layout_constraintStart_toEndOf="@+id/textViewFromSymbol"
        app:layout_constraintTop_toTopOf="@id/textViewFromSymbol" />

    <TextView
        android:id="@+id/textViewToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewSlash"
        app:layout_constraintTop_toTopOf="@id/textViewFromSymbol"
        tools:text="USD" />

    <TextView
        android:id="@+id/labelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_current_price"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFromSymbol" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/labelPrice"
        app:layout_constraintTop_toTopOf="@id/labelPrice"
        tools:text="23000.1" />

    <View
        android:id="@+id/splitterPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelPrice"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#63000000" />

    <TextView
        android:id="@+id/labelLowestPriceToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_lowest_price_today"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splitterPrice" />

    <TextView
        android:id="@+id/textViewLowestPriceToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintStart_toEndOf="@id/labelLowestPriceToday"
        app:layout_constraintTop_toTopOf="@id/labelLowestPriceToday"
        tools:text="23000.1" />

    <View
        android:id="@+id/splitterLowestPriceToday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelLowestPriceToday"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#63000000" />

    <TextView
        android:id="@+id/labelHighestPriceToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_highest_price_today"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splitterLowestPriceToday" />

    <TextView
        android:id="@+id/textViewHighestPriceToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintStart_toEndOf="@id/labelHighestPriceToday"
        app:layout_constraintTop_toTopOf="@id/labelHighestPriceToday"
        tools:text="23000.1" />

    <View
        android:id="@+id/splitterHighestPriceToday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelHighestPriceToday"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#63000000" />

    <TextView
        android:id="@+id/labelLastMarketName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_last_market"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splitterHighestPriceToday" />

    <TextView
        android:id="@+id/textViewLastMarket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/labelLastMarketName"
        app:layout_constraintTop_toTopOf="@id/labelLastMarketName"
        tools:text="Binance" />

    <View
        android:id="@+id/splitterLastMarket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelLastMarketName"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#63000000" />


    <TextView
        android:id="@+id/labelLastUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_last_update"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splitterLastMarket" />

    <TextView
        android:id="@+id/textViewLastUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/labelLastUpdate"
        app:layout_constraintTop_toTopOf="@id/labelLastUpdate"
        tools:text="10:30:05" />


</androidx.constraintlayout.widget.ConstraintLayout>